--- a/.github/workflows/laravel-ci.yml
+++ b/.github/workflows/laravel-ci.yml
@@ -57,3 +57,25 @@ jobs:
 
       - name: 🧪 Lancer les tests Laravel
         run: php artisan test
+
+    docker-build-push:
+      needs: laravel-tests
+      runs-on: ubuntu-latest
+
+      steps:
+        - name: 📥 Cloner le dépôt
+          uses: actions/checkout@v3
+
+        - name: 🔐 Login DockerHub
+          uses: docker/login-action@v2
+          with:
+            username: ${{ secrets.DOCKERHUB_USERNAME }}
+            password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+        - name: 🐳 Build and Push Docker image
+          uses: docker/build-push-action@v4
+          with:
+            context: .
+            file: ./Dockerfile
+            push: true
+            tags: ${{ secrets.DOCKERHUB_USERNAME }}/ipp-burger:latest
